[package]
name = "tenki"
version = "0.1.0"
authors = ["Matthew Perez <matt@mperez.io>"]
edition = "2018"
description = "CLI Weather Application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattjperez/tenki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
